[package]
name = "async_py"
version = "0.2.1"
description = "A Rust library for calling Python code asynchronously using pyo3 or rustpython."
edition = "2021"
license = "MIT"
repository = "https://github.com/marcomq/async_py"
readme = "README.md"
keywords = ["python", "async", "pyo3", "rustpython", "ffi"]
categories = ["api-bindings", "asynchronous", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dunce = "1.0.4"
serde_json = "1.0.114"
thiserror = "2.0"
tokio = { version = "1.36.0", features = ["sync", "macros"] }

[features]
default = ["pyo3"]
# default = ["rustpython"]
pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes"]
rustpython = ["dep:rustpython-vm", "dep:rustpython-stdlib"]

[dependencies.pyo3]
version = "0.26.0"
features = ["auto-initialize"]
optional = true


[dependencies.pyo3-async-runtimes]
version = "0.26"
features = ["attributes", "tokio-runtime"]
optional = true

[dev-dependencies]
tempfile = "3"
[dependencies.rustpython-vm]
version = "0.4.0"
optional = true
features = ["threading", "serde", "importlib"]
[dependencies.rustpython-stdlib]
version = "0.4.0"
optional = true
features = ["threading"]

# The `full` feature for tokio is needed for the tests
[dev-dependencies.tokio]
version = "1"
features = ["full"]
