[package]
name = "async_py"
version = "0.3.1"
description = "A Rust library for calling Python code asynchronously using pyo3 or rustpython."
edition = "2021"
license = "MIT"
repository = "https://github.com/marcomq/async_py"
readme = "README.md"
keywords = ["python", "async", "pyo3", "rustpython", "ffi"]
categories = ["api-bindings", "asynchronous", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dunce = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread"] }

[features]
default = ["pyo3"]
# default = ["rustpython"]
pyo3 = ["dep:pyo3"]
rustpython = ["dep:rustpython-vm", "dep:rustpython-stdlib"]

[dependencies.pyo3]
version = "0.28"
features = ["auto-initialize"]
optional = true

[dependencies.rustpython-vm]
version = "0.5"
optional = true
features = ["threading", "serde", "importlib"]

[dependencies.rustpython-stdlib]
version = "0.5"
optional = true
features = ["threading"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
